[package]
name = "todo_lib"
version = "5.1.2"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["todotxt"]
license = "MIT"
description = "Collection of utilities for todo.txt format"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/todo_lib"

[dependencies]
regex = "1.0"
chrono = "^0.4"
thiserror = "1.0"