[package]
name = "todo_lib"
version = "8.0.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2021"
keywords = ["todotxt"]
license = "MIT"
description = "Collection of utilities for todo.txt format"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/todo_lib"

[dependencies]
regex = "1"
chrono = "^0.4"
thiserror = "2"
